spacing fix and change header color

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,2 +1,2 @@
 //$grey-darker: #363636;
-$primary: rgb(85, 158, 219);
+$primary: rgba(51, 109, 145, 0.69);
